project/src/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from Parser.y
-----------------------------------------------------------------------------

state 232 contains 1 shift/reduce conflicts.
state 258 contains 1 shift/reduce conflicts.
state 261 contains 1 shift/reduce conflicts.
state 264 contains 1 shift/reduce conflicts.
state 284 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> Class                                   (1)
	Program -> Program Class                           (2)
	Program -> Program SEMICOLON                       (3)
	Statement -> SingleStatement SEMICOLON             (4)
	Statement -> Block                                 (5)
	Statement -> WHILE LEFT_PARANTHESES Expression RIGHT_PARANTHESES Statement   (6)
	Statement -> DO Statement WHILE LEFT_PARANTHESES Expression RIGHT_PARANTHESES   (7)
	Statement -> FOR LEFT_PARANTHESES SingleStatement SEMICOLON Expression SEMICOLON SingleStatement RIGHT_PARANTHESES Statement   (8)
	Statement -> FOR LEFT_PARANTHESES SEMICOLON SEMICOLON RIGHT_PARANTHESES Statement   (9)
	Statement -> FOR LEFT_PARANTHESES SingleStatement SEMICOLON SEMICOLON RIGHT_PARANTHESES Statement   (10)
	Statement -> FOR LEFT_PARANTHESES SEMICOLON Expression SEMICOLON RIGHT_PARANTHESES Statement   (11)
	Statement -> FOR LEFT_PARANTHESES SEMICOLON SEMICOLON SingleStatement RIGHT_PARANTHESES Statement   (12)
	Statement -> FOR LEFT_PARANTHESES SingleStatement SEMICOLON Expression SEMICOLON RIGHT_PARANTHESES Statement   (13)
	Statement -> FOR LEFT_PARANTHESES SEMICOLON Expression SEMICOLON SingleStatement RIGHT_PARANTHESES Statement   (14)
	Statement -> FOR LEFT_PARANTHESES SingleStatement SEMICOLON SEMICOLON SingleStatement RIGHT_PARANTHESES Statement   (15)
	Statement -> IF LEFT_PARANTHESES Expression RIGHT_PARANTHESES Statement ELSE Statement   (16)
	Statement -> IF LEFT_PARANTHESES Expression RIGHT_PARANTHESES Statement   (17)
	Statement -> Switch                                (18)
	Statements -> Statement                            (19)
	Statements -> Statements Statement                 (20)
	Block -> LEFT_BRACE RIGHT_BRACE                    (21)
	Block -> LEFT_BRACE Statements RIGHT_BRACE         (22)
	SwitchCase -> CASE Expression COLON Statements     (23)
	DefaultCase -> DEFAULT COLON Statements            (24)
	SwitchCases -> SwitchCase                          (25)
	SwitchCases -> SwitchCases SwitchCase              (26)
	Switch -> SWITCH Expression LEFT_BRACE SwitchCases RIGHT_BRACE   (27)
	Switch -> SWITCH Expression LEFT_BRACE SwitchCases DefaultCase RIGHT_BRACE   (28)
	SingleVariableDecl -> Type IDENTIFIER              (29)
	SingleVariableDecl -> Type IDENTIFIER ASSIGN Expression   (30)
	SingleVariableDecl -> FINAL Type IDENTIFIER        (31)
	SingleVariableDecl -> FINAL Type IDENTIFIER ASSIGN Expression   (32)
	RestVariableDecl -> COMMA IDENTIFIER               (33)
	RestVariableDecl -> COMMA IDENTIFIER ASSIGN Expression   (34)
	RestVariableDecls -> RestVariableDecl              (35)
	RestVariableDecls -> RestVariableDecls RestVariableDecl   (36)
	VariableDecl -> SingleVariableDecl                 (37)
	VariableDecl -> SingleVariableDecl RestVariableDecls   (38)
	LocalVariableDecl -> VariableDecl                  (39)
	SingleStatement ->                                 (40)
	SingleStatement -> RETURN Expression               (41)
	SingleStatement -> BREAK                           (42)
	SingleStatement -> CONTINUE                        (43)
	SingleStatement -> LocalVariableDecl               (44)
	SingleStatement -> StatementExpression             (45)
	Expression -> THIS                                 (46)
	Expression -> IDENTIFIER                           (47)
	Expression -> Expression DOT IDENTIFIER            (48)
	Expression -> NOT Expression                       (49)
	Expression -> Expression ADD Expression            (50)
	Expression -> Expression SUBTRACT Expression       (51)
	Expression -> Expression MULTIPLY Expression       (52)
	Expression -> Expression DIVIDE Expression         (53)
	Expression -> Expression MODULO Expression         (54)
	Expression -> Expression AND Expression            (55)
	Expression -> Expression OR Expression             (56)
	Expression -> Expression BITWISE_AND Expression    (57)
	Expression -> Expression BITWISE_OR Expression     (58)
	Expression -> Expression BITWISE_XOR Expression    (59)
	Expression -> Expression SHIFTLEFT Expression      (60)
	Expression -> Expression SHIFTRIGHT Expression     (61)
	Expression -> Expression UNSIGNED_SHIFTRIGHT Expression   (62)
	Expression -> Expression QUESTIONMARK Expression COLON Expression   (63)
	Expression -> Expression EQUAL Expression          (64)
	Expression -> Expression NOT_EQUAL Expression      (65)
	Expression -> Expression LESSER Expression         (66)
	Expression -> Expression GREATER Expression        (67)
	Expression -> Expression LESSER_EQUAL Expression   (68)
	Expression -> Expression GREATER_EQUAL Expression   (69)
	Expression -> Expression INSTANCEOF Type           (70)
	Expression -> LEFT_PARANTHESES Expression RIGHT_PARANTHESES   (71)
	Expression -> BOOLEAN_LITERAL                      (72)
	Expression -> CHARACTER_LITERAL                    (73)
	Expression -> INTEGER_LITERAL                      (74)
	Expression -> SUBTRACT INTEGER_LITERAL             (75)
	Expression -> JNULL                                (76)
	Expression -> StatementExpression                  (77)
	Arguments ->                                       (78)
	Arguments -> Expression                            (79)
	Arguments -> Arguments COMMA Expression            (80)
	StatementExpression -> Expression ASSIGN Expression   (81)
	StatementExpression -> NEW IDENTIFIER LEFT_PARANTHESES Arguments RIGHT_PARANTHESES   (82)
	StatementExpression -> Expression ADD_ASSIGN Expression   (83)
	StatementExpression -> Expression SUBTRACT_ASSIGN Expression   (84)
	StatementExpression -> Expression MULTIPLY_ASSIGN Expression   (85)
	StatementExpression -> Expression DIVIDE_ASSIGN Expression   (86)
	StatementExpression -> Expression MODULO_ASSIGN Expression   (87)
	StatementExpression -> Expression AND_ASSIGN Expression   (88)
	StatementExpression -> Expression OR_ASSIGN Expression   (89)
	StatementExpression -> Expression XOR_ASSIGN Expression   (90)
	StatementExpression -> Expression SHIFTLEFT_ASSIGN Expression   (91)
	StatementExpression -> INCREMENT Expression        (92)
	StatementExpression -> DECREMENT Expression        (93)
	StatementExpression -> Expression INCREMENT        (94)
	StatementExpression -> Expression DECREMENT        (95)
	StatementExpression -> Expression SHIFTRIGHT_ASSIGN Expression   (96)
	StatementExpression -> Expression UNSIGNED_SHIFTRIGHT_ASSIGN Expression   (97)
	StatementExpression -> Expression DOT IDENTIFIER LEFT_PARANTHESES Arguments RIGHT_PARANTHESES   (98)
	Type -> IDENTIFIER                                 (99)
	Type -> BOOLEAN                                    (100)
	Type -> CHARACTER                                  (101)
	Type -> INTEGER                                    (102)
	Type -> VOID                                       (103)
	FieldDecl -> VariableDecl SEMICOLON                (104)
	FieldDecl -> PRIVATE VariableDecl SEMICOLON        (105)
	FieldDecl -> PRIVATE STATIC VariableDecl SEMICOLON   (106)
	FieldDecl -> PUBLIC VariableDecl SEMICOLON         (107)
	FieldDecl -> PUBLIC STATIC VariableDecl SEMICOLON   (108)
	ArgumentDecl -> Type IDENTIFIER                    (109)
	ArgumentDecl -> FINAL Type IDENTIFIER              (110)
	ArgumentDecls -> ArgumentDecl                      (111)
	ArgumentDecls -> ArgumentDecls COMMA ArgumentDecl   (112)
	MethodParameters ->                                (113)
	MethodParameters -> ArgumentDecls                  (114)
	MethodDecl -> Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (115)
	MethodDecl -> STATIC Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (116)
	MethodDecl -> PRIVATE Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (117)
	MethodDecl -> PRIVATE STATIC Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (118)
	MethodDecl -> PUBLIC Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (119)
	MethodDecl -> PUBLIC STATIC Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (120)
	ConstructorDecl -> PUBLIC IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (121)
	ConstructorDecl -> PRIVATE IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (122)
	ConstructorDecl -> IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block   (123)
	ClassBody -> FieldDecl                             (124)
	ClassBody -> MethodDecl                            (125)
	ClassBody -> ConstructorDecl                       (126)
	ClassBody -> ClassBody FieldDecl                   (127)
	ClassBody -> ClassBody MethodDecl                  (128)
	ClassBody -> ClassBody ConstructorDecl             (129)
	Class -> CLASS IDENTIFIER LEFT_BRACE ClassBody RIGHT_BRACE   (130)
	Class -> CLASS IDENTIFIER LEFT_BRACE RIGHT_BRACE   (131)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ADD            { ADD }
	SUBTRACT       { SUBTRACT }
	MULTIPLY       { MULTIPLY }
	DIVIDE         { DIVIDE }
	MODULO         { MODULO }
	INCREMENT      { INCREMENT }
	DECREMENT      { DECREMENT }
	NOT            { NOT }
	AND            { AND }
	OR             { OR }
	EQUAL          { EQUAL }
	NOT_EQUAL      { NOT_EQUAL }
	LESSER         { LESSER }
	GREATER        { GREATER }
	LESSER_EQUAL   { LESSER_EQUAL }
	GREATER_EQUAL  { GREATER_EQUAL }
	BITWISE_AND    { BITWISE_AND }
	BITWISE_OR     { BITWISE_OR }
	BITWISE_XOR    { BITWISE_XOR }
	SHIFTLEFT      { SHIFTLEFT }
	SHIFTRIGHT     { SHIFTRIGHT }
	UNSIGNED_SHIFTRIGHT{ UNSIGNED_SHIFTRIGHT }
	LEFT_PARANTHESES{ LEFT_PARANTHESES }
	RIGHT_PARANTHESES{ RIGHT_PARANTHESES }
	LEFT_BRACE     { LEFT_BRACE }
	RIGHT_BRACE    { RIGHT_BRACE }
	DOT            { DOT }
	COMMA          { COMMA }
	COLON          { COLON }
	SEMICOLON      { SEMICOLON }
	ASSIGN         { ASSIGN }
	ADD_ASSIGN     { ADD_ASSIGN }
	SUBTRACT_ASSIGN{ SUBTRACT_ASSIGN }
	MULTIPLY_ASSIGN{ MULTIPLY_ASSIGN }
	DIVIDE_ASSIGN  { DIVIDE_ASSIGN }
	MODULO_ASSIGN  { MODULO_ASSIGN }
	AND_ASSIGN     { AND_ASSIGN }
	OR_ASSIGN      { OR_ASSIGN }
	XOR_ASSIGN     { XOR_ASSIGN }
	SHIFTLEFT_ASSIGN{ SHIFTLEFT_ASSIGN }
	SHIFTRIGHT_ASSIGN{ SHIFTRIGHT_ASSIGN }
	UNSIGNED_SHIFTRIGHT_ASSIGN{ UNSIGNED_SHIFTRIGHT_ASSIGN }
	BOOLEAN        { BOOLEAN }
	CHARACTER      { CHARACTER }
	INTEGER        { INTEGER }
	VOID           { VOID }
	FOR            { FOR }
	WHILE          { WHILE }
	DO             { DO }
	BREAK          { BREAK }
	CONTINUE       { CONTINUE }
	IF             { IF }
	ELSE           { ELSE }
	SWITCH         { SWITCH }
	CASE           { CASE }
	DEFAULT        { DEFAULT }
	QUESTIONMARK   { QUESTIONMARK }
	CLASS          { CLASS }
	NEW            { NEW }
	PRIVATE        { PRIVATE }
	PUBLIC         { PUBLIC }
	STATIC         { STATIC }
	THIS           { THIS }
	RETURN         { RETURN }
	BOOLEAN_LITERAL{ BOOLEAN_LITERAL $$ }
	CHARACTER_LITERAL{ CHARACTER_LITERAL  $$ }
	INTEGER_LITERAL{ INTEGER_LITERAL $$ }
	IDENTIFIER     { IDENTIFIER $$ }
	JNULL          { JNULL }
	INSTANCEOF     { INSTANCEOF }
	FINAL          { FINAL }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rules 1, 2, 3
	Statement       rules 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18
	Statements      rules 19, 20
	Block           rules 21, 22
	SwitchCase      rule  23
	DefaultCase     rule  24
	SwitchCases     rules 25, 26
	Switch          rules 27, 28
	SingleVariableDecl rules 29, 30, 31, 32
	RestVariableDecl rules 33, 34
	RestVariableDecls rules 35, 36
	VariableDecl    rules 37, 38
	LocalVariableDecl rule  39
	SingleStatement rules 40, 41, 42, 43, 44, 45
	Expression      rules 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77
	Arguments       rules 78, 79, 80
	StatementExpression rules 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98
	Type            rules 99, 100, 101, 102, 103
	FieldDecl       rules 104, 105, 106, 107, 108
	ArgumentDecl    rules 109, 110
	ArgumentDecls   rules 111, 112
	MethodParameters rules 113, 114
	MethodDecl      rules 115, 116, 117, 118, 119, 120
	ConstructorDecl rules 121, 122, 123
	ClassBody       rules 124, 125, 126, 127, 128, 129
	Class           rules 130, 131

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	CLASS          shift, and enter state 3

	Program        goto state 4
	Class          goto state 2

State 1


	CLASS          shift, and enter state 3

	Class          goto state 2

State 2

	Program -> Class .                                  (rule 1)

	SEMICOLON      reduce using rule 1
	CLASS          reduce using rule 1
	%eof           reduce using rule 1


State 3

	Class -> CLASS . IDENTIFIER LEFT_BRACE ClassBody RIGHT_BRACE    (rule 130)
	Class -> CLASS . IDENTIFIER LEFT_BRACE RIGHT_BRACE    (rule 131)

	IDENTIFIER     shift, and enter state 7


State 4

	%start_parse -> Program .                           (rule 0)
	Program -> Program . Class                          (rule 2)
	Program -> Program . SEMICOLON                      (rule 3)

	SEMICOLON      shift, and enter state 6
	CLASS          shift, and enter state 3
	%eof           accept

	Class          goto state 5

State 5

	Program -> Program Class .                          (rule 2)

	SEMICOLON      reduce using rule 2
	CLASS          reduce using rule 2
	%eof           reduce using rule 2


State 6

	Program -> Program SEMICOLON .                      (rule 3)

	SEMICOLON      reduce using rule 3
	CLASS          reduce using rule 3
	%eof           reduce using rule 3


State 7

	Class -> CLASS IDENTIFIER . LEFT_BRACE ClassBody RIGHT_BRACE    (rule 130)
	Class -> CLASS IDENTIFIER . LEFT_BRACE RIGHT_BRACE    (rule 131)

	LEFT_BRACE     shift, and enter state 8


State 8

	Class -> CLASS IDENTIFIER LEFT_BRACE . ClassBody RIGHT_BRACE    (rule 130)
	Class -> CLASS IDENTIFIER LEFT_BRACE . RIGHT_BRACE    (rule 131)

	RIGHT_BRACE    shift, and enter state 16
	BOOLEAN        shift, and enter state 17
	CHARACTER      shift, and enter state 18
	INTEGER        shift, and enter state 19
	VOID           shift, and enter state 20
	PRIVATE        shift, and enter state 21
	PUBLIC         shift, and enter state 22
	STATIC         shift, and enter state 23
	IDENTIFIER     shift, and enter state 24
	FINAL          shift, and enter state 25

	SingleVariableDeclgoto state 9
	VariableDecl   goto state 10
	Type           goto state 11
	FieldDecl      goto state 12
	MethodDecl     goto state 13
	ConstructorDeclgoto state 14
	ClassBody      goto state 15

State 9

	VariableDecl -> SingleVariableDecl .                (rule 37)
	VariableDecl -> SingleVariableDecl . RestVariableDecls    (rule 38)

	RIGHT_PARANTHESESreduce using rule 37
	COMMA          shift, and enter state 46
	SEMICOLON      reduce using rule 37

	RestVariableDeclgoto state 44
	RestVariableDeclsgoto state 45

State 10

	FieldDecl -> VariableDecl . SEMICOLON               (rule 104)

	SEMICOLON      shift, and enter state 43


State 11

	SingleVariableDecl -> Type . IDENTIFIER             (rule 29)
	SingleVariableDecl -> Type . IDENTIFIER ASSIGN Expression    (rule 30)
	MethodDecl -> Type . IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 115)

	IDENTIFIER     shift, and enter state 42


State 12

	ClassBody -> FieldDecl .                            (rule 124)

	RIGHT_BRACE    reduce using rule 124
	BOOLEAN        reduce using rule 124
	CHARACTER      reduce using rule 124
	INTEGER        reduce using rule 124
	VOID           reduce using rule 124
	PRIVATE        reduce using rule 124
	PUBLIC         reduce using rule 124
	STATIC         reduce using rule 124
	IDENTIFIER     reduce using rule 124
	FINAL          reduce using rule 124


State 13

	ClassBody -> MethodDecl .                           (rule 125)

	RIGHT_BRACE    reduce using rule 125
	BOOLEAN        reduce using rule 125
	CHARACTER      reduce using rule 125
	INTEGER        reduce using rule 125
	VOID           reduce using rule 125
	PRIVATE        reduce using rule 125
	PUBLIC         reduce using rule 125
	STATIC         reduce using rule 125
	IDENTIFIER     reduce using rule 125
	FINAL          reduce using rule 125


State 14

	ClassBody -> ConstructorDecl .                      (rule 126)

	RIGHT_BRACE    reduce using rule 126
	BOOLEAN        reduce using rule 126
	CHARACTER      reduce using rule 126
	INTEGER        reduce using rule 126
	VOID           reduce using rule 126
	PRIVATE        reduce using rule 126
	PUBLIC         reduce using rule 126
	STATIC         reduce using rule 126
	IDENTIFIER     reduce using rule 126
	FINAL          reduce using rule 126


State 15

	ClassBody -> ClassBody . FieldDecl                  (rule 127)
	ClassBody -> ClassBody . MethodDecl                 (rule 128)
	ClassBody -> ClassBody . ConstructorDecl            (rule 129)
	Class -> CLASS IDENTIFIER LEFT_BRACE ClassBody . RIGHT_BRACE    (rule 130)

	RIGHT_BRACE    shift, and enter state 41
	BOOLEAN        shift, and enter state 17
	CHARACTER      shift, and enter state 18
	INTEGER        shift, and enter state 19
	VOID           shift, and enter state 20
	PRIVATE        shift, and enter state 21
	PUBLIC         shift, and enter state 22
	STATIC         shift, and enter state 23
	IDENTIFIER     shift, and enter state 24
	FINAL          shift, and enter state 25

	SingleVariableDeclgoto state 9
	VariableDecl   goto state 10
	Type           goto state 11
	FieldDecl      goto state 38
	MethodDecl     goto state 39
	ConstructorDeclgoto state 40

State 16

	Class -> CLASS IDENTIFIER LEFT_BRACE RIGHT_BRACE .    (rule 131)

	SEMICOLON      reduce using rule 131
	CLASS          reduce using rule 131
	%eof           reduce using rule 131


State 17

	Type -> BOOLEAN .                                   (rule 100)

	ADD            reduce using rule 100
	SUBTRACT       reduce using rule 100
	MULTIPLY       reduce using rule 100
	DIVIDE         reduce using rule 100
	MODULO         reduce using rule 100
	INCREMENT      reduce using rule 100
	DECREMENT      reduce using rule 100
	AND            reduce using rule 100
	OR             reduce using rule 100
	EQUAL          reduce using rule 100
	NOT_EQUAL      reduce using rule 100
	LESSER         reduce using rule 100
	GREATER        reduce using rule 100
	LESSER_EQUAL   reduce using rule 100
	GREATER_EQUAL  reduce using rule 100
	BITWISE_AND    reduce using rule 100
	BITWISE_OR     reduce using rule 100
	BITWISE_XOR    reduce using rule 100
	SHIFTLEFT      reduce using rule 100
	SHIFTRIGHT     reduce using rule 100
	UNSIGNED_SHIFTRIGHTreduce using rule 100
	RIGHT_PARANTHESESreduce using rule 100
	LEFT_BRACE     reduce using rule 100
	DOT            reduce using rule 100
	COMMA          reduce using rule 100
	COLON          reduce using rule 100
	SEMICOLON      reduce using rule 100
	ASSIGN         reduce using rule 100
	ADD_ASSIGN     reduce using rule 100
	SUBTRACT_ASSIGNreduce using rule 100
	MULTIPLY_ASSIGNreduce using rule 100
	DIVIDE_ASSIGN  reduce using rule 100
	MODULO_ASSIGN  reduce using rule 100
	AND_ASSIGN     reduce using rule 100
	OR_ASSIGN      reduce using rule 100
	XOR_ASSIGN     reduce using rule 100
	SHIFTLEFT_ASSIGNreduce using rule 100
	SHIFTRIGHT_ASSIGNreduce using rule 100
	UNSIGNED_SHIFTRIGHT_ASSIGNreduce using rule 100
	QUESTIONMARK   reduce using rule 100
	IDENTIFIER     reduce using rule 100
	INSTANCEOF     reduce using rule 100


State 18

	Type -> CHARACTER .                                 (rule 101)

	ADD            reduce using rule 101
	SUBTRACT       reduce using rule 101
	MULTIPLY       reduce using rule 101
	DIVIDE         reduce using rule 101
	MODULO         reduce using rule 101
	INCREMENT      reduce using rule 101
	DECREMENT      reduce using rule 101
	AND            reduce using rule 101
	OR             reduce using rule 101
	EQUAL          reduce using rule 101
	NOT_EQUAL      reduce using rule 101
	LESSER         reduce using rule 101
	GREATER        reduce using rule 101
	LESSER_EQUAL   reduce using rule 101
	GREATER_EQUAL  reduce using rule 101
	BITWISE_AND    reduce using rule 101
	BITWISE_OR     reduce using rule 101
	BITWISE_XOR    reduce using rule 101
	SHIFTLEFT      reduce using rule 101
	SHIFTRIGHT     reduce using rule 101
	UNSIGNED_SHIFTRIGHTreduce using rule 101
	RIGHT_PARANTHESESreduce using rule 101
	LEFT_BRACE     reduce using rule 101
	DOT            reduce using rule 101
	COMMA          reduce using rule 101
	COLON          reduce using rule 101
	SEMICOLON      reduce using rule 101
	ASSIGN         reduce using rule 101
	ADD_ASSIGN     reduce using rule 101
	SUBTRACT_ASSIGNreduce using rule 101
	MULTIPLY_ASSIGNreduce using rule 101
	DIVIDE_ASSIGN  reduce using rule 101
	MODULO_ASSIGN  reduce using rule 101
	AND_ASSIGN     reduce using rule 101
	OR_ASSIGN      reduce using rule 101
	XOR_ASSIGN     reduce using rule 101
	SHIFTLEFT_ASSIGNreduce using rule 101
	SHIFTRIGHT_ASSIGNreduce using rule 101
	UNSIGNED_SHIFTRIGHT_ASSIGNreduce using rule 101
	QUESTIONMARK   reduce using rule 101
	IDENTIFIER     reduce using rule 101
	INSTANCEOF     reduce using rule 101


State 19

	Type -> INTEGER .                                   (rule 102)

	ADD            reduce using rule 102
	SUBTRACT       reduce using rule 102
	MULTIPLY       reduce using rule 102
	DIVIDE         reduce using rule 102
	MODULO         reduce using rule 102
	INCREMENT      reduce using rule 102
	DECREMENT      reduce using rule 102
	AND            reduce using rule 102
	OR             reduce using rule 102
	EQUAL          reduce using rule 102
	NOT_EQUAL      reduce using rule 102
	LESSER         reduce using rule 102
	GREATER        reduce using rule 102
	LESSER_EQUAL   reduce using rule 102
	GREATER_EQUAL  reduce using rule 102
	BITWISE_AND    reduce using rule 102
	BITWISE_OR     reduce using rule 102
	BITWISE_XOR    reduce using rule 102
	SHIFTLEFT      reduce using rule 102
	SHIFTRIGHT     reduce using rule 102
	UNSIGNED_SHIFTRIGHTreduce using rule 102
	RIGHT_PARANTHESESreduce using rule 102
	LEFT_BRACE     reduce using rule 102
	DOT            reduce using rule 102
	COMMA          reduce using rule 102
	COLON          reduce using rule 102
	SEMICOLON      reduce using rule 102
	ASSIGN         reduce using rule 102
	ADD_ASSIGN     reduce using rule 102
	SUBTRACT_ASSIGNreduce using rule 102
	MULTIPLY_ASSIGNreduce using rule 102
	DIVIDE_ASSIGN  reduce using rule 102
	MODULO_ASSIGN  reduce using rule 102
	AND_ASSIGN     reduce using rule 102
	OR_ASSIGN      reduce using rule 102
	XOR_ASSIGN     reduce using rule 102
	SHIFTLEFT_ASSIGNreduce using rule 102
	SHIFTRIGHT_ASSIGNreduce using rule 102
	UNSIGNED_SHIFTRIGHT_ASSIGNreduce using rule 102
	QUESTIONMARK   reduce using rule 102
	IDENTIFIER     reduce using rule 102
	INSTANCEOF     reduce using rule 102


State 20

	Type -> VOID .                                      (rule 103)

	ADD            reduce using rule 103
	SUBTRACT       reduce using rule 103
	MULTIPLY       reduce using rule 103
	DIVIDE         reduce using rule 103
	MODULO         reduce using rule 103
	INCREMENT      reduce using rule 103
	DECREMENT      reduce using rule 103
	AND            reduce using rule 103
	OR             reduce using rule 103
	EQUAL          reduce using rule 103
	NOT_EQUAL      reduce using rule 103
	LESSER         reduce using rule 103
	GREATER        reduce using rule 103
	LESSER_EQUAL   reduce using rule 103
	GREATER_EQUAL  reduce using rule 103
	BITWISE_AND    reduce using rule 103
	BITWISE_OR     reduce using rule 103
	BITWISE_XOR    reduce using rule 103
	SHIFTLEFT      reduce using rule 103
	SHIFTRIGHT     reduce using rule 103
	UNSIGNED_SHIFTRIGHTreduce using rule 103
	RIGHT_PARANTHESESreduce using rule 103
	LEFT_BRACE     reduce using rule 103
	DOT            reduce using rule 103
	COMMA          reduce using rule 103
	COLON          reduce using rule 103
	SEMICOLON      reduce using rule 103
	ASSIGN         reduce using rule 103
	ADD_ASSIGN     reduce using rule 103
	SUBTRACT_ASSIGNreduce using rule 103
	MULTIPLY_ASSIGNreduce using rule 103
	DIVIDE_ASSIGN  reduce using rule 103
	MODULO_ASSIGN  reduce using rule 103
	AND_ASSIGN     reduce using rule 103
	OR_ASSIGN      reduce using rule 103
	XOR_ASSIGN     reduce using rule 103
	SHIFTLEFT_ASSIGNreduce using rule 103
	SHIFTRIGHT_ASSIGNreduce using rule 103
	UNSIGNED_SHIFTRIGHT_ASSIGNreduce using rule 103
	QUESTIONMARK   reduce using rule 103
	IDENTIFIER     reduce using rule 103
	INSTANCEOF     reduce using rule 103


State 21

	FieldDecl -> PRIVATE . VariableDecl SEMICOLON       (rule 105)
	FieldDecl -> PRIVATE . STATIC VariableDecl SEMICOLON    (rule 106)
	MethodDecl -> PRIVATE . Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 117)
	MethodDecl -> PRIVATE . STATIC Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 118)
	ConstructorDecl -> PRIVATE . IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 122)

	BOOLEAN        shift, and enter state 17
	CHARACTER      shift, and enter state 18
	INTEGER        shift, and enter state 19
	VOID           shift, and enter state 20
	STATIC         shift, and enter state 36
	IDENTIFIER     shift, and enter state 37
	FINAL          shift, and enter state 25

	SingleVariableDeclgoto state 9
	VariableDecl   goto state 34
	Type           goto state 35

State 22

	FieldDecl -> PUBLIC . VariableDecl SEMICOLON        (rule 107)
	FieldDecl -> PUBLIC . STATIC VariableDecl SEMICOLON    (rule 108)
	MethodDecl -> PUBLIC . Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 119)
	MethodDecl -> PUBLIC . STATIC Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 120)
	ConstructorDecl -> PUBLIC . IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 121)

	BOOLEAN        shift, and enter state 17
	CHARACTER      shift, and enter state 18
	INTEGER        shift, and enter state 19
	VOID           shift, and enter state 20
	STATIC         shift, and enter state 32
	IDENTIFIER     shift, and enter state 33
	FINAL          shift, and enter state 25

	SingleVariableDeclgoto state 9
	VariableDecl   goto state 30
	Type           goto state 31

State 23

	MethodDecl -> STATIC . Type IDENTIFIER LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 116)

	BOOLEAN        shift, and enter state 17
	CHARACTER      shift, and enter state 18
	INTEGER        shift, and enter state 19
	VOID           shift, and enter state 20
	IDENTIFIER     shift, and enter state 27

	Type           goto state 29

State 24

	Type -> IDENTIFIER .                                (rule 99)
	ConstructorDecl -> IDENTIFIER . LEFT_PARANTHESES MethodParameters RIGHT_PARANTHESES Block    (rule 123)

	LEFT_PARANTHESESshift, and enter state 28
	IDENTIFIER     reduce using rule 99


State 25

	SingleVariableDecl -> FINAL . Type IDENTIFIER       (rule 31)
	SingleVariableDecl -> FINAL . Type IDENTIFIER ASSIGN Expression    (rule 32)

	BOOLEAN        shift, and enter state 17
	CHARACTER      shift, and enter state 18
	INTEGER        shift, and enter state 19
	VOID           shift, and enter state 20
	IDENTIFIER     shift, and enter state 27

	Type           goto state 26

State 26

	SingleVariableDecl -> FINAL Type . IDENTIFIER       (rule 31)
	SingleVariableDecl -> FINAL Type . IDENTIFIER ASSIGN Expression    (rule 32)

	IDENTIFIER     shift, and enter state 67


State 27

	Type -> IDENTIFIER .                                (rule 99)

	ADD            reduce using rule 99
	SUBTRACT       reduce using rule 99
	MULTIPLY       reduce using rule 99
	DIVIDE         reduce using rule 99
	MODULO         reduce using rule 99
	INCREMENT      reduce using rule 99
	DECREMENT      reduce using rule 99
	AND            reduce using rule 99
	OR             reduce using rule 99
	EQUAL          reduce using rule 99
	NOT_EQUAL      reduce using rule 99
	LESSER         reduce using rule 99
	GREATER        reduce using rule 99
	LESSER_EQUAL   reduce using rule 99
	GREATER_EQUAL  reduce using rule 99
	BITWISE_AND    reduce using rule 99
	BITWISE_OR     reduce using rule 99
	BITWISE_XOR    reduce using rule 99
	SHIFTLEFT      reduce using rule 99
	SHIFTRIGHT     reduce using rule 99
	UNSIGNED_SHIFTRIGHTreduce using rule 99
	RIGHT_PARANTHESESreduce using rule 99
	LEFT_BRACE     reduce using rule 99
	DOT            reduce using rule 99
	COMMA          reduce using rule 99
	COLON          reduce using rule 99
	SEMICOLON      reduce using rule 99
	ASSIGN         reduce using rule 99
	ADD_ASSIGN     reduce using rule 99
	SUBTRACT_ASSIGNreduce using rule 99
	MULTIPLY_ASSIGNreduce using rule 99
	DIVIDE_ASSIGN  reduce using rule 99
	MODULO_ASSIGN  reduce using rule 99
	AND_ASSIGN     reduce using rule 99
	OR_ASSIGN      reduce using rule 99
	XOR_ASSIGN     reduce using rule 99
	SHIFTLEFT_ASSIGNreduce using rule 99
	SHIFTRIGHT_ASSIGNreduce using rule 99
	UNSIGNED_SHIFTRIGHT_ASSIGNreduce using rule 99
	QUESTIONMARK   reduce using rule 99
	IDENTIFIER     reduce using rule 99
	INSTANCEOF     reduce using rule 99


State 28
